--- a/frontend/src/styles/ActionCard.css
+++ b/frontend/src/styles/ActionCard.css
@@ -6,6 +6,12 @@
   padding: 10px;
 }
 
+
+.parallax-card img {
+  aspect-ratio: 4/3;
+}
+
+
 .parallax-card .img1 {
   width: 100%;
   height: 100%;
@@ -13,6 +19,8 @@
   position: relative;
   /* transform: translate(-50%, -50%); */
 }
+
+
 .parallax-card .img2 {
   width: 100%;
   height: 100%;
@@ -21,10 +29,12 @@
   /* transform: translate(-50%, -50%); */
 }
 
+
 .card-content {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  bottom: -50px;
+  left: 45%;
+  width: 95%;
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.7);
   padding: 20px;
@@ -33,10 +43,12 @@
   z-index: 3;
 }
 
+
 .card-content h2 {
   font-size: 24px;
   margin: 0;
 }
+
 
 .card-content p {
   font-size: 16px;
