--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -18,20 +18,28 @@
     position: absolute;
     bottom: 0;
     right: -2px;
-    width: 50%;
-    /* z-index: 2; */
+    width: 85%;
+    z-index: 3;
 }
 .layer2{
     position: absolute;
     bottom: 0;
     left: -2px;
     width: 50%;
-    /* z-index: 2; */
+    z-index: 2;
 }
 .layer3{
     position: absolute;
-    top: 116px;
-    left: 206px;
-    width: 40%;
-    /* z-index: 2; */
+    top: 125px;
+    left: 215px;
+    width: 45%;
+    z-index: 1;
+}
+
+.layer4{
+    position: absolute;
+    top: 30px;
+    right: 80px;
+    width: 55%;
+    z-index: 0;
 }
