--- a/frontend/src/styles/Rajasthan.css
+++ b/frontend/src/styles/Rajasthan.css
@@ -1,14 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua&display=swap');
+
 .index {
+    width: 100dvw;
+    height: 100dvh;
     background-color: #ddb892;
     display: flex;
     flex-direction: row;
     justify-content: center;
     width: 100%;
+    margin: 0;
+    align-items: center;
 }
 
 .index .div {
     background-color: #ddb892;
-    height: 1024px;
+    height: 80dvh;
     position: relative;
-    width: 1440px;
+    width: 45dvw;
+}
+
+.state-title{
+    font-family: 'Inknut Antiqua', serif;
 }
