--- a/frontend/src/styles/NavbarTop.css
+++ b/frontend/src/styles/NavbarTop.css
@@ -2567,7 +2567,7 @@ textarea.form-control {
 
 .navbar .nav-link p {
     margin: 0px 0px;
-    color: white !important;
+    color: #000 !important;
     text-transform: uppercase;
     font-weight: 600;
     font-size: 22px;
@@ -2690,7 +2690,7 @@ textarea.form-control {
 
 .navbar-transparent .navbar-brand,
 [class*="bg"] .navbar-brand {
-    color: #FFFFFF;
+    color: #000;
     opacity: 0.9;
     filter: alpha(opacity=90);
 }
@@ -2702,7 +2702,7 @@ textarea.form-control {
     background-color: transparent;
     opacity: 1;
     filter: alpha(opacity=100);
-    color: #FFFFFF;
+    color: #726f6f;
 }
 
 .navbar-transparent .navbar-nav .nav-item .nav-link:not(.btn),
