--- a/frontend/src/styles/Rajasthan.css
+++ b/frontend/src/styles/Rajasthan.css
@@ -16,9 +16,13 @@
     background-color: #ddb892;
     height: 80dvh;
     position: relative;
-    width: 45dvw;
+    width: 15dvw;
 }
 
 .state-title{
     font-family: 'Inknut Antiqua', serif;
+    width: 200%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
