--- a/frontend/src/styles/FrameCard.css
+++ b/frontend/src/styles/FrameCard.css
@@ -1,64 +1,65 @@
-.box {
-    height: 20%;
-    position: relative;
-    width: 20%;
+.frame-card {
+    height: 120%;
+    width: 15%;
+    background-color: "#b56576";
+    border-radius: 30px;
+    box-shadow: inset 0px 4px 4px #00000040;
+    height: 280px;
+    left: 3vw;
+    position: "fixed";
+    top: 31px;
 }
 
-.box .clothes {
+.frame-card .clothes2 {
     height: 463px;
     left: 0;
     top: 0;
-    width: 267px;
+    width: 80%;
 }
 
-.box .overlap-group {
+.frame-card .overlap-group2 {
+    margin: 20px;
     background-color: #b56576;
     border-radius: 30px;
     box-shadow: inset 0px 4px 4px #00000040;
-    height: 250px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 160px;
+    height: 55%;
+    width: 100%;
 }
 
-.box .img {
-    height: 315px;
+.frame-card .img2 {
+    top: 75px;
     left: 0;
     object-fit: cover;
-    position: absolute;
-    top: 75px;
-    width: 264px;
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
-.box .overlap {
-    height: 64px;
+.frame-card .overlap2 {
+    position: relative;
     left: 13px;
-    position: absolute;
-    top: 398px;
-    width: 240px;
+    width: 100%;
+    height: 20%;
 }
 
-.box .rectangle {
+.frame-card .rectangles {
     background-color: #b56576;
     border-radius: 20px;
-    height: 44px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 160px;
+    height: 50%;
+    width: 100%;
+
+    display: flex;
 }
 
-.box .text-wrapper {
+.frame-card .text-title2 {
     color: #ffffff;
     font-family: "Gilda Display-Regular", Helvetica;
-    font-size: 25px;
+    font-size: 18px;
     font-weight: 400;
-    height: 58px;
-    left: 66px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
     text-align: center;
-    top: 6px;
+    position: relative;
+    top: -40%;
+    height: 100%;
+    width: 100%;
 }
+
