--- a/frontend/src/styles/FrameCard.css
+++ b/frontend/src/styles/FrameCard.css
@@ -1,28 +1,18 @@
+
 .frame-card {
-    height: 120%;
+    margin-top: 5%;
+    height: 100%;
     width: 15%;
     background-color: "#b56576";
     border-radius: 30px;
-    box-shadow: inset 0px 4px 4px #00000040;
-    height: 280px;
-    left: 3vw;
-    position: "fixed";
-    top: 31px;
-}
-.frame-card {
-    height: 120%;
-    width: 15%;
-    background-color: "#b56576";
-    border-radius: 30px;
-    box-shadow: inset 0px 4px 4px #00000040;
-    height: 280px;
+    height: 100%;
     left: 3vw;
     position: "fixed";
     top: 31px;
 }
 
 .frame-card .clothes2 {
-    height: 463px;
+    height: 100%;
     left: 0;
     top: 0;
     width: 80%;
@@ -33,7 +23,7 @@
     margin: 20px;
     background-color: #b56576;
     border-radius: 30px;
-    box-shadow: inset 0px 4px 4px #00000040;
+    box-shadow: inset -5px 6px 4px 6px #00000040;
     height: 55%;
     width: 100%;
 }
@@ -49,7 +39,7 @@
 
 .frame-card .overlap2 {
     position: relative;
-    left: 13px;
+    margin: 20px;
     width: 100%;
     height: 20%;
 }
@@ -59,7 +49,7 @@
     border-radius: 20px;
     height: 50%;
     width: 100%;
-
+    box-shadow: inset -5px 3px 4px 4px #00000040;
     display: flex;
 }
 
