--- a/frontend/src/styles/ecommerce.css
+++ b/frontend/src/styles/ecommerce.css
@@ -57,7 +57,7 @@
     right: -1370px;
   } */
   
-  .desktop .text-wrap{
+  .desktop .text-wrapss{
     color: #000000;
     font-family: "Gilda Display-Regular", Helvetica;
     font-size: 20px;
@@ -161,28 +161,27 @@
     background-color: #ffffff;
     border-radius: 35px;
     /* box-shadow: inset 20px -12px 25px #00000040; */
-    height: 103px;
+    height: 10%;
     position: relative;
-    width: 885px;
+    width: 60%;
     left: 50%;
     top: 14%;
     transform: translate(-50%, 50%);
+    display: flex;
+    justify-content: center;
   }
   
   .desktop .text-wrapper-4 {
     color: #000000;
     font-family: "Lancelot-Regular", Cursive;
-    font-size: 60px;
+    font-size: 2.5rem;
     font-weight: 400;
     letter-spacing: 0;
     line-height: normal;
-    position: absolute;
+    /* position: relative; */
     text-align: center;
-    height: 81px;
-    width: 704px;
-    top: -35%;
-    left: 50%;
-    transform: translate(-50%, 50%);
+    height: 100%;
+    width: 100%;
   }
   
   .main-box {
