--- a/frontend/src/styles/ActionCard.css
+++ b/frontend/src/styles/ActionCard.css
@@ -71,18 +71,19 @@
   font-family: "Kelly Slab", Helvetica;
   font-size: 36px;
   font-weight: 400;
-  left: 72px;
+  /* left: 72px; */
   letter-spacing: 0;
   line-height: normal;
-  position: absolute;
+  position: relative;
   text-align: center;
-  top: 436px;
+  bottom: -88%;
+  width: 80%;
 }
 
 .index .overlap-2 {
-  width: 350px;
-  height: 380px;
-  left: 15%;
+  width: 100%;
+  height: 70%;
+  /* left: 15%; */
   position: relative;
   /* top: 263px; */
   justify-content: center;
@@ -102,44 +103,11 @@
 .index .img-inside {
   height: 70%;
   width: 70%;
-  top: 15%;
-  left: 5%;
-  position: absolute;
-  -webkit-filter: drop-shadow(10px 5px 5px #222);
-  filter: drop-shadow(10px 5px 5px #222);
-}
-.index .img-inside1 {
-  height: 50%;
-  width: 60%;
-  top: 20%;
-  left: 10%;
   position: absolute;
   -webkit-filter: drop-shadow(10px 5px 5px #222);
   filter: drop-shadow(10px 5px 5px #222);
 }
 
-.index .camel {
-  height: 244px;
-  left: 0;
-  object-fit: cover;
-  position: absolute;
-  top: 174px;
-  width: 346px;
-}
-
-.index .text-wrapper{
-  width: 80%;
-  left: 0;
-  color: #ffffff;
-  font-family: "Kelly Slab", Helvetica;
-  font-size: 36px;
-  font-weight: 400;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 85%;
-}
 
 .text-wrapper{
   content: "";
