Carousel Fix Co-authored-by: Tushar <tushar21014@users.noreply.github.com> Co-authored-by: miranish <miranish@users.noreply.github.com>

--- a/frontend/src/styles/NavbarTop.css
+++ b/frontend/src/styles/NavbarTop.css
@@ -1711,9 +1711,9 @@ textarea.form-control {
     cursor: not-allowed;
 }
 
-.slider {
-    background: #c8c8c8;
-}
+/* .slider { */
+    /* background: #c8c8c8; */
+/* } */
 
 .c-1-color {
     background-color: blue;
