--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -25,10 +25,37 @@
     justify-content: center;
 }
 
+.section::before {
+    content: ' ';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 200px;
+    background: linear-gradient(to top, #f, transparent);
+    z-index: 1;
+}
+
 .section1 {
     position: relative;
-    top: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.section1::before {
+    content: '  ';
+    position: absolute;
+    bottom: 0;
     left: 0;
+    width: 100%;
+    height: 200px;
+    background: linear-gradient(to top, #fff, transparent);
+    z-index: 1;
+
 }
 
 #rmynBG, #krsnaBG {
@@ -53,17 +80,6 @@
     border: none;
     height: 85vh;
     width: 64vw;
-}
-
-.section::before {
-    content: ' ';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 200px;
-    background: linear-gradient(to top, #fff, transparent);
-    z-index: 1;
 }
 
 .section img {
