--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -32,7 +32,7 @@
     left: 0;
     width: 100%;
     height: 200px;
-    background: linear-gradient(to top, #f, transparent);
+    background: linear-gradient(to top, #fff, transparent);
     z-index: 1;
 }
 
