--- a/frontend/src/styles/Rajasthan.css
+++ b/frontend/src/styles/Rajasthan.css
@@ -100,3 +100,56 @@
     }
 }
 
+
+.navv {
+    width: 5%;
+    padding: 10px;
+    top: 115%;
+    right: 3%;
+    position: absolute;
+    box-sizing: border-box;
+    border-radius: 30px;
+    background: #F6E8EA;
+    justify-content: center;
+  
+   
+}
+.navv ::after{
+  content: "";
+  background: rgb(200, 98, 108);
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  border-radius: 32px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: scale(.7,.7);
+  z-index: -1;
+  transition: all 0.3s cubic-bezier(0.850, 0.150, 0.505, 1.030);
+}
+.nav1.vertical ul {
+    flex-direction: column;
+  }
+
+.nav1 ul {
+    display: flex;
+    list-style-type: none;
+  }
+
+.nav1 ul li a{
+    display: inline-block;
+    list-style-type: unset;
+    padding: 15px;
+    color: #EF626C;
+    transition: transform 0.3s cubic-bezier(0.925, 0.150, 0.505, 1.030);
+  }
+.nav1 ul li a:hover{
+    transform: scale(1.3);
+  }
+  
+
+.nav1.vertical:hover::after {
+    transform: scale(1.1,1);
+    
+  }
